--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        python -m pip install pdm
+        pdm install
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pdm run flake8
